--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,12 @@
                         android:id="@+id/address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Location"
+                        android:text="Home"
                         android:textSize="16sp"
                         android:textColor="@color/white"
                         android:layout_centerVertical="true"
                         android:layout_toLeftOf="@+id/loc"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="5dp"/>
                     <ImageView
                         android:id="@+id/loc"
                         android:layout_width="16dp"
