--- a/app/src/main/res/layout/sell_crops_item_layout_grid.xml
+++ b/app/src/main/res/layout/sell_crops_item_layout_grid.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="20dp"
+    android:paddingHorizontal="10dp"
     android:paddingVertical="10dp"
     android:layout_marginVertical="5dp"
     android:layout_marginHorizontal="10dp"
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:src="@color/black"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/ll_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,59 +37,65 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/name"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="Tomato"
-            android:textSize="16sp"/>
-        <TextView
-            android:id="@+id/price"
+            android:text="Tomato"/>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Tomato"/>
-        <TextView
-            android:id="@+id/unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Tomato"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="Tomato"/>
+            <TextView
+                android:id="@+id/unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="Tomato"/>
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/ll_1"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@id/ll_1"
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/plus"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
             android:src="@drawable/ic_add_40dp"
             android:background="@drawable/add_crop_back"
-            android:layout_weight="1"/>
+            android:layout_weight="3"/>
         <TextView
             android:id="@+id/count"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:text="2"
             android:textSize="10sp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             android:gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/count_back"/>
         <ImageView
             android:id="@+id/minus"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
             android:src="@drawable/ic_remove"
             android:background="@drawable/minus_crop_back"
-            android:layout_weight="1"/>
+            android:layout_weight="3"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
