--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parent"
     tools:context=".Activities.CartActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -39,81 +40,227 @@
                 android:layout_centerInParent="true"/>
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
-    <LinearLayout
-        android:id="@+id/ll_coupon"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Coupon Available"
-            android:textSize="17sp"
-            android:textColor="#a7a7a7"
-            android:layout_gravity="center"/>
-        <RelativeLayout
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/coupon_back_image"
-            android:elevation="5dp">
+            android:background="@color/white"
+            android:orientation="vertical">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/ll_coupon"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="60dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="20dp">
                 <TextView
-                    android:id="@+id/coupon_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="EX101DY"
-                    android:textSize="20sp"
-                    android:textColor="#a7a7a7"/>
-                <TextView
-                    android:id="@+id/coupon_offer"
-                    android:layout_width="wrap_content"
+                    android:text="Coupon Available"
+                    android:textSize="17sp"
+                    android:textColor="#a7a7a7"
+                    android:layout_gravity="center"/>
+                <RelativeLayout
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="50% Off"
-                    android:textSize="14sp"
-                    android:textColor="@color/colorPrimary"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Applied"
-                android:textColor="@color/white"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="5dp"
-                android:background="@drawable/roundbutton"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="18dp"/>
+                    android:background="@drawable/coupon_back_image"
+                    android:elevation="5dp">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="60dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/coupon_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="EX101DY"
+                            android:textSize="20sp"
+                            android:textColor="#a7a7a7"/>
+                        <TextView
+                            android:id="@+id/coupon_offer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="50% Off"
+                            android:textSize="14sp"
+                            android:textColor="@color/colorPrimary"/>
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Applied"
+                        android:textColor="@color/white"
+                        android:paddingHorizontal="10dp"
+                        android:paddingVertical="5dp"
+                        android:background="@drawable/roundbutton"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="40dp"
+                        android:layout_marginTop="18dp"/>
 
-        </RelativeLayout>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:src="@drawable/dotted_line"
-            android:layout_marginTop="10dp"/>
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyler_view"
+                </RelativeLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
+                    android:src="@drawable/dotted_line"
+                    android:layout_marginTop="10dp"/>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ll_coupon"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingVertical="10dp"
+                android:layout_marginBottom="50dp"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recyler_view"
+                app:layout_constraintBottom_toBottomOf="parent">
+                <TextView
+                    android:id="@+id/coupon_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/colorPrimary"
+                    android:text="Coupon"/>
+                <TextView
+                    android:id="@+id/coupon_discount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/colorPrimary"
+                    android:text="-"/>
+                <TextView
+                    android:id="@+id/tax_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="7dp"
+                    android:textSize="14sp"
+                    android:layout_below="@+id/coupon_text"
+                    android:text="Tax and Charges"/>
+                <TextView
+                    android:id="@+id/tax_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="7dp"
+                    android:textSize="14sp"
+                    android:layout_below="@id/coupon_discount"
+                    android:text="-"/>
+                <TextView
+                    android:id="@+id/others_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="7dp"
+                    android:textSize="14sp"
+                    android:layout_below="@+id/tax_text"
+                    android:text="Transportation and Labour"/>
+                <TextView
+                    android:id="@+id/others_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="7dp"
+                    android:textSize="14sp"
+                    android:layout_below="@id/tax_amount"
+                    android:text="-"/>
+                <ImageView
+                    android:id="@+id/dotted_line_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/dotted_line"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@id/others_text"/>
+                <TextView
+                    android:id="@+id/total_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="10dp"
+                    android:textSize="24sp"
+                    android:layout_below="@+id/dotted_line_2"
+                    android:text="Total"/>
+                <TextView
+                    android:id="@+id/total_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="10dp"
+                    android:textSize="23sp"
+                    android:layout_below="@id/dotted_line_2"
+                    android:text=""/>
+            </RelativeLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="20dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_coupon"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/total_amount_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="23sp"
+                android:textColor="#575757"
+                android:layout_marginVertical="10dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="30dp"/>
+            <TextView
+                android:id="@+id/book_slot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Book Slot"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:paddingHorizontal="30dp"
+                android:paddingVertical="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginVertical="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/roundbutton"/>
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/load"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/load"
+                android:layout_marginLeft="30dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
