--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -94,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_shopping_cart"
+        android:onClick="goToCartActivity"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintHorizontal_bias="1"
