--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -2,14 +2,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/ll_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="30dp"
         android:layout_alignParentLeft="true"
         android:orientation="vertical">
         <TextView
@@ -43,9 +42,9 @@
         android:id="@+id/total_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4500"
+        android:text="45000"
         android:textColor="#585858"
-        android:textSize="18sp"
+        android:textSize="12sp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:layout_centerVertical="true"/>
@@ -54,19 +53,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="80dp"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/total_price">
+        android:layout_alignParentRight="true">
         <ImageView
             android:id="@+id/plus"
-            android:layout_width="30dp"
-            android:layout_height="22dp"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
             android:src="@drawable/ic_add_40dp"
             android:background="@drawable/add_crop_back"/>
         <TextView
             android:id="@+id/count"
             android:layout_width="25dp"
-            android:layout_height="22dp"
+            android:layout_height="20dp"
             android:text="2"
             android:textSize="10sp"
             android:textStyle="bold"
@@ -75,8 +74,8 @@
             android:background="@drawable/count_back"/>
         <ImageView
             android:id="@+id/minus"
-            android:layout_width="30dp"
-            android:layout_height="22dp"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
             android:src="@drawable/ic_remove"
             android:background="@drawable/minus_crop_back"/>
     </LinearLayout>
