--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -247,6 +247,7 @@
                 android:text="Book Slot"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
+                android:onClick="bookSlot"
                 android:paddingHorizontal="30dp"
                 android:paddingVertical="10dp"
                 android:layout_marginRight="20dp"
