--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="grey">#aeaeae</color>
     <color name="blue">#4ea0e7</color>
     <color name="blueLight">#14b8ff</color>
+    <color name="confirmed">#0eb095</color>
+    <color name="pending">#e68619</color>
+    <color name="rejected">#ff3030</color>
+    <color name="changed">#bcad1e</color>
 </resources>
