--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/title"
+                        android:textColor="@color/white"
+                        android:layout_alignParentLeft="true"
+                        android:textSize="23sp"/>
+                    <TextView
                         android:id="@+id/address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
